solvers/TCS-Meiji/td-validate-master/test/valid/web3.td
s td 3 3 5
b 2 2 3 4
b 1 1 2 3
b 3 3 4 5
1 2
2 3
