solvers/TCS-Meiji/td-validate-master/test/invalid/td-s-line-wrong-order.td
b 1 1 2 3
s td 3 3 5
b 2 2 3 4
b 3 3 4 5
1 2
2 3
